--- a/changelog.html
+++ b/changelog.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Changelog &#8212; metadata_reader 0.0.post1.dev1+gebb11b1 documentation</title>
+    <title>Changelog &#8212; metaxtract unknown documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/basic.css?v=c058f7c8" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=0ca6144b" />
-    <script src="_static/documentation_options.js?v=b7a57851"></script>
+    <script src="_static/documentation_options.js?v=3f1b9271"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="metadata_reader" href="api/modules.html" />
+    <link rel="next" title="metaxtract" href="api/modules.html" />
     <link rel="prev" title="Contributors" href="authors.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -52,7 +52,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="Main">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="index.html">metadata_reader</a></h1>
+<h1 class="logo"><a href="index.html">metaxtract</a></h1>
 
 
 
@@ -88,7 +88,7 @@
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="authors.html" title="previous chapter">Contributors</a></li>
-      <li>Next: <a href="api/modules.html" title="next chapter">metadata_reader</a></li>
+      <li>Next: <a href="api/modules.html" title="next chapter">metaxtract</a></li>
   </ul></li>
 </ul>
 </div>
