--- a/contributing.html
+++ b/contributing.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Contributing &#8212; metadata_reader 0.0.post1.dev1+gebb11b1 documentation</title>
+    <title>Contributing &#8212; metaxtract unknown documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/basic.css?v=c058f7c8" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=0ca6144b" />
-    <script src="_static/documentation_options.js?v=b7a57851"></script>
+    <script src="_static/documentation_options.js?v=3f1b9271"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="genindex.html" />
@@ -278,7 +278,7 @@ of environments, including private companies and proprietary code bases.</p>
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="Main">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="index.html">metadata_reader</a></h1>
+<h1 class="logo"><a href="index.html">metaxtract</a></h1>
 
 
 
