--- a/genindex.html
+++ b/genindex.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; metadata_reader 0.0.post1.dev1+gebb11b1 documentation</title>
+    <title>Index &#8212; metaxtract unknown documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/basic.css?v=c058f7c8" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=0ca6144b" />
-    <script src="_static/documentation_options.js?v=b7a57851"></script>
+    <script src="_static/documentation_options.js?v=3f1b9271"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
@@ -41,10 +41,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
-    metadata_reader
+    metaxtract
 
       <ul>
-        <li><a href="api/metadata_reader.html#module-metadata_reader">module</a>
+        <li><a href="api/metaxtract.html#module-metaxtract">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -53,7 +53,7 @@
     module
 
       <ul>
-        <li><a href="api/metadata_reader.html#module-metadata_reader">metadata_reader</a>
+        <li><a href="api/metaxtract.html#module-metaxtract">metaxtract</a>
 </li>
       </ul></li>
   </ul></td>
@@ -67,7 +67,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="Main">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="index.html">metadata_reader</a></h1>
+<h1 class="logo"><a href="index.html">metaxtract</a></h1>
 
 
 
